# cubemaster

./: .gitignore  Cargo.toml  LED_MATRICES_FINDINGS.md  README.md  SOUND_SUBSYSTEM_FINDINGS.md  Taskfile.yml
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  rust_ci.yml
companion/: Cargo.toml
companion/assets/: scenario.css  style.css
companion/src/: main.rs  state.rs
companion/src/ble/: client.rs  mod.rs  pairing.rs  scanner.rs
companion/src/components/: connection_header.rs  icons.rs  mod.rs  sidebar.rs  titlebar.rs
companion/src/store/: local.rs  mod.rs
companion/src/views/: dashboard.rs  discover.rs  mod.rs  scenario.rs  settings.rs
companion/src/wifi/: discovery.rs  http_client.rs  mod.rs
doc/: DEV_GUIDE.md  POWER_CIRCUIT_TODO.md  README_V2.md  cubemaster-mvp.bs
doc_old/: README.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: ble_gatt.rs  config.rs  http_server.rs  lib.rs  wifi.rs
rgraph/: Cargo.toml  README.md
rgraph-color/: Cargo.toml
rgraph-color/src/: color.rs  cubehelix.rs  hsl.rs  lab.rs  lib.rs  named.rs  parser.rs  rgb.rs  tests.rs
rgraph-core/: Cargo.toml  README.md
rgraph-core/src/: constants.rs  lib.rs  promise.rs  styles.rs
rgraph-core/src/types/: changes.rs  connection.rs  edges.rs  geometry.rs  handles.rs  mod.rs  nodes.rs  panzoom.rs  viewport.rs
rgraph-core/src/utils/: connections.rs  dom.rs  edge_toolbar.rs  general.rs  graph.rs  marker.rs  mod.rs  node_toolbar.rs  shallow_node_data.rs  store.rs
rgraph-core/src/utils/edges/: bezier.rs  format.rs  general.rs  mod.rs  positions.rs  smoothstep.rs  straight.rs
rgraph-core/src/xydrag/: mod.rs  utils.rs
rgraph-core/src/xyhandle/: mod.rs  types.rs  utils.rs
rgraph-core/src/xyminimap/: mod.rs
rgraph-core/src/xypanzoom/: eventhandler.rs  filter.rs  mod.rs  utils.rs
rgraph-core/src/xyresizer/: mod.rs  types.rs  utils.rs
rgraph-core/tests/: integration.rs
rgraph-dispatch/: Cargo.toml
rgraph-dispatch/src/: lib.rs
rgraph-drag/: Cargo.toml
rgraph-drag/src/: lib.rs
rgraph-interpolate/: Cargo.toml
rgraph-interpolate/src/: array.rs  basis.rs  color_helpers.rs  cubehelix.rs  discrete.rs  hcl.rs  hsl.rs  (+7 more)
rgraph-selection/: Cargo.toml
rgraph-transition/: Cargo.toml
rgraph-zoom/: Cargo.toml
rgraph-zoom/src/: lib.rs  transform.rs  zoom.rs
rgraph/doc/: index.md
rgraph/doc/advanced/: performance.md  state-management.md  uncontrolled-flow.md
rgraph/doc/components/: background.md  controls.md  edge-toolbar.md  minimap.md  node-resizer.md  node-toolbar.md  rgraph.md
rgraph/doc/concepts/: adding-interactivity.md  building-a-flow.md  built-in-components.md  terms-and-definitions.md  the-viewport.md
rgraph/doc/customization/: custom-edges.md  custom-nodes.md  edge-labels.md  handles.md  theming.md
rgraph/doc/hooks/: use-nodes-state.md  use-rgraph.md  use-store.md  use-viewport.md
rgraph/doc/recipes/: dragndrop.md  layouting.md
rgraph/src/: context.rs  lib.rs  prelude.rs
rgraph/src/additional_components/: mod.rs
rgraph/src/additional_components/background/: background.rs  mod.rs  patterns.rs  types.rs
rgraph/src/additional_components/controls/: control_button.rs  controls.rs  mod.rs  types.rs
rgraph/src/additional_components/controls/icons/: fit_view.rs  lock.rs  minus.rs  mod.rs  plus.rs  unlock.rs
rgraph/src/additional_components/edge_toolbar/: edge_toolbar.rs  mod.rs  types.rs
rgraph/src/additional_components/minimap/: minimap.rs  minimap_node.rs  minimap_nodes.rs  mod.rs  types.rs
rgraph/src/additional_components/node_resizer/: mod.rs  node_resize_control.rs  node_resizer.rs  types.rs
rgraph/src/additional_components/node_toolbar/: mod.rs  node_toolbar.rs  node_toolbar_portal.rs  types.rs
rgraph/src/components/: a11y_descriptions.rs  attribution.rs  connection_line.rs  edge_label_renderer.rs  handle.rs  mod.rs  nodes_selection.rs  panel.rs  rgraph_provider.rs  selection_listener.rs  store_updater.rs  user_selection.rs  viewport_portal.rs
rgraph/src/components/batch_provider/: mod.rs  types.rs  use_queue.rs
rgraph/src/components/edge_wrapper/: mod.rs  update_anchors.rs  utils.rs
rgraph/src/components/edges/: base_edge.rs  bezier_edge.rs  edge_anchor.rs  edge_text.rs  mod.rs  simple_bezier_edge.rs  smoothstep_edge.rs  step_edge.rs  straight_edge.rs
rgraph/src/components/node_wrapper/: mod.rs  use_node_observer.rs  utils.rs
rgraph/src/components/nodes/: default_node.rs  group_node.rs  input_node.rs  mod.rs  output_node.rs  utils.rs
rgraph/src/container/: flow_renderer.rs  mod.rs  pane.rs  viewport.rs  zoom_pane.rs
rgraph/src/container/edge_renderer/: marker_definitions.rs  marker_symbols.rs  mod.rs
rgraph/src/container/graph_view/: mod.rs  use_node_or_edge_types_warning.rs  use_styles_loaded_warning.rs
rgraph/src/container/node_renderer/: mod.rs  use_resize_observer.rs
rgraph/src/container/rgraph/: init_values.rs  mod.rs  wrapper.rs
rgraph/src/contexts/: mod.rs  node_id.rs  store_ctx.rs
rgraph/src/dom/: eval.rs  mod.rs  pointer.rs  resize_observer.rs  wheel.rs
rgraph/src/hooks/: mod.rs  use_color_mode_class.rs  use_connection.rs  use_drag.rs  use_edges.rs  use_global_key_handler.rs  use_handle_connections.rs  use_internal_node.rs  use_key_press.rs  use_move_selected_nodes.rs  use_node_connections.rs  use_nodes.rs  use_nodes_data.rs  use_nodes_edges_state.rs  use_nodes_initialized.rs  use_on_edges_change_middleware.rs  use_on_init_handler.rs  use_on_nodes_change_middleware.rs  use_on_selection_change.rs  use_on_viewport_change.rs  use_resize_handler.rs  use_rgraph.rs  use_store.rs  use_update_node_internals.rs  use_viewport.rs  use_viewport_helper.rs  use_viewport_sync.rs  use_visible_edge_ids.rs  use_visible_node_ids.rs
rgraph/src/store/: actions.rs  initial_state.rs  mod.rs
rgraph/src/styles/: mod.rs  utils.rs
rgraph/src/types/: component_props.rs  edges.rs  general.rs  instance.rs  mod.rs  nodes.rs  store.rs
rgraph/src/utils/: changes.rs  general.rs  mod.rs
shared/: Cargo.toml  README.md
shared/src/: auth.rs  ble.rs  led.rs  lib.rs  naming.rs  protocol.rs  sound.rs
(+46 files in other folders)
