[workspace]
members = ["firmware", "companion", "shared"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabrielmougard/cubemaster"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
cubemaster-shared = { path = "shared" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 's'
