[package]
description = "CubeMaster companion app (Dioxus desktop)"
name = "cubemaster-companion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the video → cube converter (requires system ffmpeg dev libs:
#   sudo apt install libavutil-dev libavformat-dev libavcodec-dev libswscale-dev libswresample-dev
# or `brew install ffmpeg` on macOS).
video-converter = ["dep:ffmpeg-next"]

[dependencies]
cubemaster-shared = { workspace = true, features = ["std"] }
dioxus = { version = "0.7.7", features = ["desktop", "router"] }
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "process"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
mdns-sd = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Persistent local config (stores paired cube list + PSKs)
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
heapless = { version = "0.8", features = ["serde"] }
uuid = "1"

# Studio dependencies (T-020 / T-020b)
# ffmpeg-next 7.x targets FFmpeg 6.x (Ubuntu 24.04 default).
# For FFmpeg 7.x, bump to ffmpeg-next = "8".
ffmpeg-next = { version = "7", optional = true }
rfd = "0.15"
thiserror = "2"

# base64 is used by the embedded WebGL cube viewer to ship texture data
# from Rust to the JavaScript renderer running in the WebView.
base64 = "0.22"

# Experimental "Scenario editor" : node-graph editor for game scenarios
rgraph      = { path = "../rgraph" }
rgraph-core = { path = "../rgraph-core" }
