[package]
description = "CubeMaster embedded firmware for ESP32-S3"
name = "cubemaster-firmware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cubemaster"
path = "src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
cubemaster-shared.workspace = true

esp-hal = { version = "~1.1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.9.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = "0.7"
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.6.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32s3"] }
esp-backtrace = { version = "0.18.0", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
bt-hci = "0.8.0"
trouble-host = { version = "0.6.0", features = ["gatt", "defmt"] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# Persistent flash key-value store.
sequential-storage = "7.2.0"
# mDNS responder for LAN discovery.
edge-mdns = { version = "0.7.0", default-features = false }
edge-nal = { version = "0.6.0", default-features = false }
# Lightweight no_std HTTP server on top of embassy-net TCP.
picoserve = { version = "0.18.0", features = ["defmt"] }
# HMAC-SHA256 for session auth (no_std, no-alloc).
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }
heapless = { version = "0.8", default-features = false, features = ["serde"] }

critical-section = "1.2.0"
static_cell = "2.1.1"

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
  "xtensa-semihosting",
] }
