[package]
description = "CubeMaster shared protocol types and constants"
name = "cubemaster-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }
