[package]
description = "CubeMaster shared protocol types and constants"
name = "cubemaster-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables std-only helpers (e.g. String-returning name generator, serde_json codecs).
# Do NOT enable from the firmware.
std = ["serde/std", "dep:serde_json"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }
serde_json = { version = "1", optional = true }
heapless = { version = "0.8", default-features = false, features = ["serde"] }
